<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MessUp</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="tab_text_1">@string/menu_contacts</string>
    <string name="tab_text_2">Strangers</string>
    <string name="tab_text_3">Others</string>
    <string name="tab_text_4">More</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tips_permission_denied">You may have denied the permission of READING SMS, so this app can not work properly! Probably you will need to grant the permission in System Settings.</string>
    <string name="txt_btn_get">I got it</string>
    <string name="txt_title_sorry">Sorry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_unspecified">Unspecified</string>
    <string name="menu_archived">Archived</string>
    <string name="menu_more">More</string>
    <string name="menu_share">Share</string>


    <!-- platform_packages_apps_mms strings res start-->

    <!-- Subject to display in the conversation list if there is no subject -->
    <string name="no_subject_view">(No subject)</string>


</resources>
